--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
 	</div>
 
 	<div id="reservation" class="container-fluid reservation">
+	
 
 		<!-- reservation form -->
+		<h3>Make a Reservation</h3>
 		<div class="row reservation-form-container">
 			<div class="col-md-12 text-center reservation-form">
 				<form class="form-inline reservations">
@@ -63,7 +65,7 @@
 
 		<!-- reservations -->
 		<table class="table table-striped col-md-12 container-fluid">
-			<h4>Reservations</h4>
+			<h4>Current Reservations</h4>
 			<thead>
 				<th>Name</th>
 				<th>Day</th>
@@ -72,7 +74,22 @@
 		</table>
 	</div>
 
-	<div id="map" class="container-fluid restaurant-locator">
+	<!--Restaurant location-->
+	<div class="col-sm-3">	
+			<div class="panel panel-default store-hours">
+					<div class="panel-body">
+						<address>
+								<span class="glyphicon glyphicon-map-marker" aria-hidden="true">											
+									</span> <strong>Monk's Cafe</strong><br>
+							123 Upstate Dr <br>
+							New York, NY 12345 <br>
+							<abbr title="phone">Phone:</abbr> (123)-896-5632
+						</address>
+					</div>
+				</div>
+	</div>
+
+	<div id="map" class="container-fluid restaurant-locator">	
 	</div>
 
   <!-- Firebase -->
